tests/error/modifier_errors/flag_loop_unitary.err
Error: Invalid expression in dagger (at $FILE:6:4)
  | 
4 | @guppy(unitary=True)
5 | def test() -> None:
6 |     for _ in range(46):
  |     ^^^^^^^^^^^^^^^^^^^
7 |         pass
  | ^^^^^^^^^^^^ Loop found in a dagger context

Help: The function `test` is declared with the unitary flag: `unitary=True`.
Thus dagger constraints apply to its body.

Help: Control flow statements (e.g. loops and branches) are not allowed in
daggered contexts.

Guppy compilation failed due to 1 previous error
